verif/test/deca/context/invalid/initialization/one-line-dec-init-verif.res
src/test/deca/context/invalid/initialization/one-line-dec-init.deca:11:12: Expression of type 'boolean' cannot be assigned to an 'int'
